objects/kugo2p__PaymentX__c.object
<CustomObject>
    <description>Kugamon - Main object that captures Payment details. A Payment may be assigned either to an Order or Invoice, not both.</description>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Account is required. To change the Account, please update this field.</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total transaction amount (including tax, shipping and fees)</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Auth_Amount__c</fullName>
        <inlineHelpText>Amount authorized for this transaction.</inlineHelpText>
        <label>Authorization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Auth_Expiration__c</fullName>
        <inlineHelpText>Authorization expiration date returned from payment processor.</inlineHelpText>
        <label>Auth Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>kugo2p__Authorization_Id__c</fullName>
        <inlineHelpText>Authorization ID returned from payment processor.</inlineHelpText>
        <label>Authorization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Batch_Processing_Action__c</fullName>
        <description>For Scheduled payments.  Type of action to perform when batch processing the scheduled payment.</description>
        <inlineHelpText>For Scheduled payments.  Type of action to perform when batch processing the scheduled payment.</inlineHelpText>
        <label>Batch Processing Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process using assigned Payment Method</fullName>
                </value>
                <value>
                    <fullName>Process using default Payment Method on Contact</fullName>
                </value>
                <value>
                    <fullName>Send payment request</fullName>
                </value>
                <value>
                    <fullName>Capture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Batch_Processing_Result__c</fullName>
        <description>For Scheduled payments. Displays results after batch processing.</description>
        <inlineHelpText>For Scheduled payments. Displays results after batch processing.</inlineHelpText>
        <label>Batch Processing Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Card_Type__c</fullName>
        <description>Credit card type</description>
        <inlineHelpText>Credit card type</inlineHelpText>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Check_Number__c</fullName>
        <label>Check Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Connection_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set whenever a connection error occurs between Salesforce and the payment processor.  Check the payment log for details when this flag is set.</inlineHelpText>
        <label>Connection Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Billing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <inlineHelpText>Actual date of payment.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Discount__c</fullName>
        <inlineHelpText>cart item total - discount + tax + shipping = transaction amount</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Invoice_Number__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>kugo2p__KugamonInvoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Is_Test_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this is a test transaction.</inlineHelpText>
        <label>Test Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Last_4_Digits__c</fullName>
        <inlineHelpText>Last 4 digits of credit card.</inlineHelpText>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Last_Response_Status__c</fullName>
        <description>Used to keep track of last response status value.  Allows ability to filter out redundant notifications.</description>
        <inlineHelpText>Used to keep track of last response status value.  Allows ability to filter out redundant notifications.</inlineHelpText>
        <label>Last Response Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Log__c</fullName>
        <inlineHelpText>Transaction results returned from payment processor and other related information.</inlineHelpText>
        <label>Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Memo__c</fullName>
        <inlineHelpText>Details about the transaction.</inlineHelpText>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Merchant_Custom_Data__c</fullName>
        <inlineHelpText>Data passed in via custom fields in the new payment notification.</inlineHelpText>
        <label>Merchant Custom Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__NetAmount__c</fullName>
        <formula>kugo2p__Amount__c - kugo2p__Transaction_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field and related function has been deprecated. Do not display field on the page layout.</description>
        <inlineHelpText>This function is deprecated</inlineHelpText>
        <label>Deprecated</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments (Deprecated)</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Parent_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This look-up field is set for credit card captures and other transactions that have a &apos;parent&apos; transaction or payment record.</inlineHelpText>
        <label>Parent Transaction</label>
        <referenceTo>kugo2p__PaymentX__c</referenceTo>
        <relationshipLabel>Related Payments</relationshipLabel>
        <relationshipName>Related_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stored Payment Method used to process the transaction.</description>
        <inlineHelpText>Stored Payment Method used to process the transaction.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>kugo2p__Payment_Method__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Payment_Processor__c</fullName>
        <inlineHelpText>The payment processor or merchant account used to process this payment.  This field is set automatically when external payments are received and recorded, and when payments are processed using the Payment Terminal.</inlineHelpText>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>eWay</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>WorldPay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For subscription and recurring payments, this field should reference the subscription payment profile.</inlineHelpText>
        <label>Recurring Charge Profile</label>
        <referenceTo>kugo2p__Payment_Profile__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Payment_Request_Date__c</fullName>
        <description>The date scheduled payment requests should be sent out.  N days before the Scheduled Payment Date, where  N = Processing Action Lead Time, or the record creation date (whichever is later).</description>
        <formula>IF( ISNULL( kugo2p__Scheduled_Payment_Date__c ) , NULL, IF( DATEVALUE(CreatedDate) &gt;kugo2p__Scheduled_Payment_Date__c -  NULLVALUE( kugo2p__Processing_Action_Lead_Time__c  ,0), DATEVALUE(CreatedDate), kugo2p__Scheduled_Payment_Date__c -  NULLVALUE( kugo2p__Processing_Action_Lead_Time__c  ,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date scheduled payment requests should be sent out.  N days before the Scheduled Payment Date, where  N = Processing Action Lead Time, or the record creation date (whichever is later).</inlineHelpText>
        <label>Payment Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check or Money Order</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ECheck</fullName>
                </value>
                <value>
                    <fullName>Electronic Funds Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Processing_Action_Lead_Time__c</fullName>
        <description>Number of days before the scheduled payment date that the batch processing action (e.g. Send payment request) is to be processed.</description>
        <inlineHelpText>Number of days before the scheduled payment date that the batch processing action (e.g. Send payment request) is to be processed.</inlineHelpText>
        <label>Processing Action Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Processor_Connection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Processor Connection</label>
        <referenceTo>kugo2p__Processor_Connection__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setup the next scheduled native subscription payment when this payment is completed.</description>
        <inlineHelpText>Setup the next scheduled native subscription payment when this payment is completed.</inlineHelpText>
        <label>Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Scheduled_Payment_Date__c</fullName>
        <inlineHelpText>Scheduled Payment Date is the date on which payment is expected to be paid, and may be used to trigger payment reminders using workflow rules.</inlineHelpText>
        <label>Scheduled Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Scheduled_Payment_Number__c</fullName>
        <inlineHelpText>Sequence number assigned to scheduled payment</inlineHelpText>
        <label>Scheduled Payment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Company__c</fullName>
        <label>Ship To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Name__c</fullName>
        <label>Contact Shipping Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Deprecated Functionality</description>
        <inlineHelpText>Deprecated Functionality</inlineHelpText>
        <label>Deprecated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Calc_Result__c</fullName>
        <inlineHelpText>Result of last shipping calculation attempt. [Success|Error]:[Error Code]:[Message]</inlineHelpText>
        <label>Shipping Calc Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Shipping</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping__c</fullName>
        <description>Shipping Amount without Currency from the Payment.</description>
        <inlineHelpText>Shipping Amount without Currency from the Payment.</inlineHelpText>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <inlineHelpText>For recording manual payments like a check or cash, please choose &quot;Completed&quot;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Subscription_Id__c</fullName>
        <inlineHelpText>For recurring or subscription payments, this is the recurring payment profile Id.</inlineHelpText>
        <label>Subscription Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Tax_Calc_Result__c</fullName>
        <inlineHelpText>Result of last tax calculation attempt.</inlineHelpText>
        <label>Tax Calc Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Tax_Method__c</fullName>
        <inlineHelpText>Used with the Trigger Tax Calc checkbox to determine which custom tax calculations to use.</inlineHelpText>
        <label>Tax Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State/Province Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Tax__c</fullName>
        <inlineHelpText>Tax amount on transaction.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TransactionFeePercent__c</fullName>
        <formula>If( NOT(ISNULL(kugo2p__Transaction_Fee__c)), kugo2p__Transaction_Fee__c / kugo2p__Amount__c, NULL)</formula>
        <label>Transaction Fee Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__Transaction_Fee__c</fullName>
        <inlineHelpText>Payment processor transaction fee.</inlineHelpText>
        <label>Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Transaction_Id__c</fullName>
        <inlineHelpText>Transaction Id returned from payment processor.</inlineHelpText>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                    <default>true</default>
                    <label>Payment</label>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Trigger_Payment_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger workflow rules configured to send a payment request email.</description>
        <inlineHelpText>Used to trigger workflow rules configured to send a payment request email.</inlineHelpText>
        <label>Trigger Payment Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trigger_Shipping_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to trigger custom shipping calculations for payments with Shopping Cart Items.</inlineHelpText>
        <label>Trigger Shipping Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trigger_Tax_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to trigger custom tax calculations for payments with Shopping Cart Items.</inlineHelpText>
        <label>Trigger Tax Calc</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>kugo2p__AllInProcess</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__Date__c</columns>
        <columns>kugo2p__Amount__c</columns>
        <columns>kugo2p__Transaction_Id__c</columns>
        <columns>kugo2p__Transaction_Type__c</columns>
        <columns>kugo2p__Payment_Processor__c</columns>
        <columns>kugo2p__Status__c</columns>
        <columns>kugo2p__SalesOrder__c</columns>
        <columns>kugo2p__Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>kugo2p__Status__c</field>
            <operation>contains</operation>
            <value>In Process</value>
        </filters>
        <label>All In Process</label>
    </listViews>
    <listViews>
        <fullName>kugo2p__All_Payments</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__Date__c</columns>
        <columns>kugo2p__Amount__c</columns>
        <columns>kugo2p__Status__c</columns>
        <columns>kugo2p__Transaction_Type__c</columns>
        <columns>kugo2p__Transaction_Fee__c</columns>
        <columns>kugo2p__Transaction_Id__c</columns>
        <columns>kugo2p__Card_Type__c</columns>
        <columns>kugo2p__Payment_Processor__c</columns>
        <columns>kugo2p__SalesOrder__c</columns>
        <columns>kugo2p__Invoice__c</columns>
        <columns>kugo2p__Payment_Profile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>